--- a/conference/NetDevConf2025-0x19/mq-cake-paper/isea.bib
+++ b/conference/NetDevConf2025-0x19/mq-cake-paper/isea.bib
@@ -219,3 +219,20 @@ pages = {435–448},
 numpages = {14},
 keywords = {guaranteed latency, latency SLA, network QoS, network calculus, traffic pacing}
 }
+@article{codel,
+  title={Controlling queue delay},
+  author={Nichols, Kathleen and Jacobson, Van},
+  journal={Communications of the ACM},
+  volume={55},
+  number={7},
+  pages={42--50},
+  year={2012},
+  publisher={ACM New York, NY, USA}
+}
+@online{mq,
+    author={Patrick McHardy},
+    title = "net\_sched 00/07: classful multiqueue dummy scheduler",
+    howpublished  = {\url{https://lwn.net/Articles/351021/}},
+    year = 2009,
+    urldate = {25.04.2024},
+}
