--- a/conference/NetDevConf2025-0x19/mq-cake-paper/evaluation.tex
+++ b/conference/NetDevConf2025-0x19/mq-cake-paper/evaluation.tex
@@ -1,19 +1,21 @@
 \section{Evaluation}\label{sec:evaluation}
 In this section we evaluate \textit{mq-cake} and show its capabilities of accurately enforcing rate limits up to the network card's capabilities of 25 Gbps and achieves excellent linear scaling with an increasing number of hardware queues.
 %
-Further, \textit{mq-cake} achieves 10--2500X lower tail-latencies as compared to EDT-eBPF approach.
+Further, \textit{mq-cake} achieves 10--2500X lower tail-latencies as compared to EDT-BPF approach.
 
-This chapter is organized as follows:
+This section is organized as follows:
 %
-The first section describes the experimental setup. 
+The first subsection describes the experimental setup. 
 %
-Next, we evaluate \textit{mq-cake}'s rate limiting capabilities and the corresponding accuracy as well as its scaling properties in comparison to EDT-eBPF.
+Next, we evaluate \textit{mq-cake}'s rate limiting capabilities and the corresponding accuracy as well as its scaling properties in comparison to HTB and single-queue CAKE.
 %
-The third section considers the dynamic properties of \textit{mq-cake}, especially its behavior when the number of UDP flows and \textit{synctime} change.
+In the third subsection we test and evaluate \textit{mq-cake} and EDT-BPF under TCP traffic as well as the corresponding latencies using the Flent~\cite{flent} network testing tool.
 %
-The fourth section tests and evaluates \textit{mq-cake} and EDT-eBPF under TCP traffic using the Flent~\cite{flent} network testing tool.
+The fourth subsection considers the dynamic properties of \textit{mq-cake}, especially its behavior when the number of UDP flows and \textit{synctime} change.
 %
-Lastly, we discuss the limitations of the current approach as well as open questions and future works in this field.
+The fifth subsection discusses the limitations of the current approach, especially focusing on imbalances in load between queues.
+%
+Lastly, we summarize the evaluation results and outline further directions for future works in this field.
 
 \subsection{Experimental Setup}
 The experimental setup consists of two identical servers, both of which are equipped with: 
@@ -43,23 +45,28 @@ The TIPSY framework~\cite{tipsy} is used to orchestrate tests.
 %
 For configuring and installing \textit{mq-cake}, the \textit{tc} command line tool is extended~\cite{mq-cake-iproute}.
 %
-Further, in case of the MoonGen UDP flood tests, the installed \textit{mq-cake} instances are configured with \textit{besteffort flows overhead 18 mpu 64 noatm memlimit (default\_memlimit$\div$nr of queues)}~\cite{cake-manual}.
+Further, in case of the MoonGen UDP flood tests, the installed \textit{mq-cake} instances are configured with \textit{besteffort flows overhead 18 mpu 64 noatm}~\cite{cake-manual}.
 %
-The overhead compensation is configured so that the rate calculation of MoonGen and \textit{mq-cake} are identical.
+The same options are used for single-queue CAKE.
 %
-The EDT-eBPF program builds upon the pseudo-code presented at the Netdev Conference 0x14~\cite{edt-ebpf}, with modifications to enforce a global rate limit and incorporate the aforementioned overhead compensation.
+The overhead compensation is configured so that the rate calculation of MoonGen and \textit{mq-cake}/single-queue CAKE are identical.
 %
-The drop-horizon is set to $2s$, following the value proposed by the authors~\cite{edt-ebpf}. The adjusted eBPF program is detailed in Algorithm~\ref{alg:edt-ebpf}.
+In order to enforce a global rate limit using HTB, we install a single class at the root-qdisc, which rate limits all network traffic.
+%
+As mentioned above, the EDT-BPF as presented in prior work is not suitable to enforce a global rate limit.
+To enable a comparison with \textit{mq-cake}, we modify the BPF program implementation to enforce such a global rate limit and incorporate the aforementioned overhead compensation.
+%
+The drop-horizon is set to $2s$, following the value proposed by the authors~\cite{edt-ebpf}. The adjusted BPF program is detailed in Algorithm~\ref{alg:edt-ebpf}.
 
 To align with the expected buffer occupation, the \lstinline{limit} and \lstinline{flow_limit} parameters of the FQ instances are configured based on the following formula:
 \begin{align*}
     \text{Limit} = \frac{\text{Rate Limit}\cdot \text{Drop Horizon}}{\text{\# FQ instances}\cdot \text{Packet size} \cdot 8}
 \end{align*}
 
-If the FQ buffer sizes are not properly adjusted, FQ may drop packets unnoticed by the eBPF program, ultimately impacting performance.
+If the FQ buffer sizes are not properly adjusted, FQ may drop packets unnoticed by the BPF program, ultimately impacting performance.
 
 \begin{algorithm}[t]
-    \caption{EDT-eBPF implementation}\label{alg:edt-ebpf}
+    \caption{EDT-BPF implementation}\label{alg:edt-ebpf}
 \begin{algorithmic}[1]
 \Procedure{rate\_limit}{skb}
     \State pkt\_len = skb$\rightarrow$len + compensation
@@ -105,7 +112,7 @@ If the FQ buffer sizes are not properly adjusted, FQ may drop packets unnoticed 
     network traffic containing only full MTU-sized packets}\label{fig:accuracy}
 \end{figure*}
 The most pressing questions about the presented approach is: How accurately does it enforces the configured rate limit? And how does it scale with an increasing number of hardware queues?
-In this section, we present an in-depth analysis of \textit{mq-cake}'s performance using an unresponsive UDP traffic flood and compare it to the EDT-eBPF approach. 
+In this section, we present an in-depth analysis of \textit{mq-cake}'s performance using an unresponsive UDP traffic flood and compare it to the single-queue sch\_cake and sch\_htb. 
 We demonstrate that \textit{mq-cake} not only achieves excellent rate conformance but also exhibits near-perfect scaling properties.
 
 Figure~\ref{fig:tp_rate_conformance} shows the achieved throughput for varying rate limits, ranging from 10 Mbps to 24 Gbps.
@@ -118,7 +125,8 @@ These settings maximize the achievable throughput and reduce concurrent access t
 %
 Figure~\ref{fig:tp_deviation_total} highlights the total deviation from the configured maximum rate limit as well as a relative percentage of the rate limit (Figure~\ref{fig:tp_deviation_perc}).
 %
-Together, these plots demonstrate that both \textit{mq-cake} and EDT-eBPF can effectively shape traffic up to 24 Gbps, with a maximum deviation of less than 0.8\%. Notably, \textit{mq-cake} achieves an even lower deviation of approximately 0.2\%.
+Together, these plots demonstrate that both \textit{mq-cake} is able to shape traffic up to 24 Gbps, with a maximum deviation of less than
+0.25\%. HTB and single-queue CAKE, on the other hand, plateau at around 7--8 Gbps.
 
 \begin{figure}[h]
     \centering
@@ -132,17 +140,16 @@ Further, we ensure that the number of receive queues always matches the number o
 The effect of these imbalances are further explained in the Limitations section.
 %
 
-Figure~\ref{fig:scaling} reveals the throughput achieved by \textit{mq-cake} and EDT-eBPF in relation to the number of available hardware queues.
+Figure~\ref{fig:scaling} reveals the throughput achieved by \textit{mq-cake}, HTB, and single-queue CAKE in relation to the number of available hardware queues.
 %
-This experiment shows that both \textit{mq-cake} and EDT-eBPF scale linearly with an increasing number of transmission queues.
-%
-The achieved throughput increases at a quicker rate up to 20 transmission queues, after which point the improvement reduces due the use of hyperthreading cores.
-%
+The test shows that both HTB's and single-queue CAKE's performance degrades as more hardware queues become available.
+This is due to lock contention, which increases as the number of receive queues grows. 
+Under these conditions, an increasing number of CPUs attempt to access the qdisc, which then increases the overall wait time to acquire the root lock. 
+\textit{mq-cake}, on the other hand, scales linearly — the achieved throughput increases at a quicker rate up to 20 transmission
+queues, after which point the improvement reduces due the use of hyperthreading cores.
 This effect is due to resource-sharing between the two logical cores residing in one physical core:
-%
 Thus, their performance is not completely independent from one another.
-%
-However, even with hyperthreading enabled, \textit{mq-cake} and EDT-eBPF are still able to increase their throughput.
+However, even with hyperthreading enabled, \textit{mq-cake} is still able to increase the throughput.
 
 \subsection{Impact of Synctime}\label{sec:synchronization-time}
 Up to this point, the traffic in the previous evaluations has been held static, meaning that the number of flows did not change.
@@ -194,6 +201,11 @@ Further, the 4 already-active qdiscs will not immediately update their estimated
 These conditions result in the observed overshoot in Figure~\ref{fig:switching_200us}.
 %
 
+\begin{figure}[h]
+    \centering
+    \includesvg[scale=0.5]{images/sync_txq_64}
+    \caption{Achieved packet rate based on the available transmission queues for varying \textit{synctimes}. The traffic consists of 4 flows containing only 64 byte packets. In case of a \textit{synctime} of $0us$, the rate estimation is done for every packet.}\label{fig:sync_txq_64}
+\end{figure}
 %
 When evaluating accuracy, it is important to consider the induced queue length at the next bottleneck in the packet path, which is caused by the throughput spike, as well as the increased latencies it produces.
 %
@@ -215,11 +227,6 @@ These plots also clearly show that reducing the \textit{syncime} also inhibits t
 %
 However, if the \textit{synctime} is too greatly reduced (i.e.\ less than 50$\mu s$ in the conducted experiments), the overhead of the synchronization loop increases, lowering the achieved throughput.
 %
-\begin{figure}[H]
-    \centering
-    \includesvg[scale=0.5]{images/sync_txq_64}
-    \caption{Achieved packet rate based on the available transmission queues for varying \textit{synctimes}. The traffic consists of 4 flows containing only 64 byte packets.}\label{fig:sync_txq_64}
-\end{figure}
 Figure~\ref{fig:sync_txq_64} shows the relation between the achieved rate and the number of transmission queues for different \textit{synctimes}.
 %
 This plot clearly shows that when the \textit{synctime} is too low, the achieved packet rate decreases due to the synchronization overhead.
@@ -228,7 +235,7 @@ A greater number of transmission queues increases the \textit{mq-cake} instances
 %
 
 \subsection{TCP and Latencies}
-\begin{figure}
+\begin{figure}[t]
     \centering
     \hspace{-0.25cm}
     \begin{subfigure}{\linewidth}
@@ -242,7 +249,7 @@ A greater number of transmission queues increases the \textit{mq-cake} instances
         \includesvg[scale=0.5]{images/ping-edtbpf-mqcake-2s-horizon-20000-log.svg}
         \caption{Ping}\label{fig:flent_ping_2s}
     \end{subfigure}
-    \caption{Flent tcp\_nup test with 1024 TCP streams, a configured rate limit of 20 Gbps, and a $2s$ drop horizon for EDT-eBPF}\label{fig:flent_2s}
+    \caption{Flent tcp\_nup test with 1024 TCP streams, a configured rate limit of 20 Gbps, and a $2s$ drop horizon for EDT-BPF}\label{fig:flent_2s}
 \end{figure}
 
 The previous experiments are based on unresponsive UDP traffic.
@@ -250,19 +257,19 @@ To review how these approaches perform with a packet-loss sensitive transport pr
 %
 Flent's tcp\_nup test is executed using 1024 TCP upload streams.
 %
-Figure~\ref{fig:flent_2s} compares the performance of \textit{mq-cake} and EDT-eBPF under a global rate limit of 20 Gbps.
+Figure~\ref{fig:flent_2s} compares the performance of \textit{mq-cake} and EDT-BPF under a global rate limit of 20 Gbps.
 
-\textit{mq-cake} maintains stable rate enforcement, remaining slightly below the configured limit, whereas EDT-eBPF initially exceeds the rate limit before gradually reducing throughput in the latter half of the test (Figure~\ref{fig:flent_tp_2s}).
+\textit{mq-cake} maintains stable rate enforcement, remaining slightly below the configured limit, whereas EDT-BPF initially exceeds the rate limit before gradually reducing throughput in the latter half of the test (Figure~\ref{fig:flent_tp_2s}).
 %
-Figure~\ref{fig:flent_ping_2s} shows the latencies measured during the test execution. \textit{mq-cake} achieves 0.4 ms latencies at the 99th percentile, a 2500X improvement as compared to EDT-eBPF.
+Figure~\ref{fig:flent_ping_2s} shows the latencies measured during the test execution. \textit{mq-cake} achieves $0.4 ms$ latencies at the 99th percentile, a 2500x improvement as compared to EDT-BPF.
 %
-The drop horizon of EDT-eBPF directly corresponds with the expected latencies.
+The drop horizon of EDT-BPF directly corresponds with the expected latencies.
 %
 
-Figure~\ref{fig:flent_5ms} shows the same test execution as before but with a reduced drop horizon of $5ms$ for the EDT-eBPF approach. Figure~\ref{fig:flent_tp_5ms} reveals that lowering the drop horizon to $5ms$ not only stabilizes EDT-eBPF's rate conformance but also reduces the tail latencies to $5ms$ (Figure~\ref{fig:flent_ping_5ms}).
+Figure~\ref{fig:flent_5ms} shows the same test execution as before but with a reduced drop horizon of $5ms$ for the EDT-BPF approach. Figure~\ref{fig:flent_tp_5ms} reveals that lowering the drop horizon to $5ms$ not only stabilizes EDT-BPF's rate conformance but also reduces the tail latencies to $5ms$ (Figure~\ref{fig:flent_ping_5ms}).
 %
 However, reducing the drop horizon only works effectively, if the RTT's of the TCP flows have similar values as the drop horizon, thus high RTT flows would suffer from such a low drop horizon.
-Even with this configuration \textit{mq-cake} achieves 10x lower latencies as compared to EDT-eBPF. 
+Even with this configuration \textit{mq-cake} achieves 10x lower latencies as compared to EDT-BPF. 
 
 These experiments highlight \textit{mq-cake}'s ability to maintain low latencies without the need of a backpressure mechanism, thus making it suitable not only for end hosts but also in packet forwarding use cases. 
 \begin{figure}
@@ -279,28 +286,13 @@ These experiments highlight \textit{mq-cake}'s ability to maintain low latencies
         \includesvg[scale=0.5]{images/ping-edtbpf-mqcake-5ms-horizon-20000-log.svg}
         \caption{Ping}\label{fig:flent_ping_5ms}
     \end{subfigure}
-    \caption{Flent tcp\_nup test with 1024 TCP streams, a configured rate limit of 20 Gbps, and a $5ms$ drop horizon for EDT-eBPF}\label{fig:flent_5ms}
+    \caption{Flent tcp\_nup test with 1024 TCP streams, a configured rate limit of 20 Gbps, and a $5ms$ drop horizon for EDT-BPF}\label{fig:flent_5ms}
 \end{figure}
 
-\subsection{Discussion and Limitations}
-The presented experiments reveal that \textit{mq-cake} is able to shape traffic up to 25 Gbps while achieving high accuracy with a deviation around 0.2\%.
-%
-Further, \textit{mq-cake} increases throughput with a greater number of hardware queues, even achieving slightly higher throughput as compared to EDT-eBPF beyond 20 transmission queues.
-%
-In addition, the analysis of the \textit{synctime} shows that setting its value too low increases the CPU overhead.
-%
-As a lower bound, the synchronization time should be higher than the time it takes to complete one scan over all qdiscs.
-%
-On the other hand, higher \textit{synctimes} lead to less CPU load but also increase the time it takes \textit{mq-cake} to converge.
-%
-To balance between CPU load and accuracy, the experiments show that a \textit{synctime} value between 100--200$\mu s$ is ideal.
-\textit{mq-cake} also improves tail-latencies while being as accurate as the EDT-eBPF approach.
-
-Overall, the aforementioned tests reveal that \textit{mq-cake} displays excellent scalability while maintaining accuracy in enforcing rate limits.
-%
-However, this approach is, of course, not without shortcomings.
-%
-Our experimental setup ensures that the qdisc layer of the Linux kernel is saturated with packets.
+\subsection{Limitations}
+Over the course of the evaluation, we showed that \textit{mq-cake} scales excellent with increasing number of hardware queues as well as reducing tail latencies.
+However, we identified that the current approach has a reduced accuracy when network traffic is suboptimal distributed across the \textit{mq-cake} instances.
+So far, our experimental setup ensures that the qdisc layer of the Linux kernel is saturated with packets.
 %
 However, under real-world conditions, this might not always be the case, as not all flows are sent at full speed or evenly distributed across transmission queues.
 %
@@ -333,15 +325,33 @@ The estimated rate of the 8 transmission queues is higher than the traffic they 
 %
 However, as more transmission queues are added, the imbalance is reduced. At the same time, the estimated rate for each transmission queue also decreases, leading to less unused bandwidth. 
 %
-It is important to note that the EDT-eBPF approach's performance is not affected by these imbalances.
-
 These imbalances in multi-queue networking environments are well known in the literature~\cite{titan, loom, silo}.
 %
-To address this issue, Titan~\cite{titan} attempts to balance out traffic between queues when packets are enqueued.
+
+\subsection{Discussion and Future Work}
+The presented experiments reveal that \textit{mq-cake} is able to shape traffic up to 25 Gbps while achieving high accuracy with a deviation around 0.25\%.
 %
-It is likely that \textit{mq-cake} could benefit from such a balancing system.
+Further, \textit{mq-cake} increases throughput with a greater number of hardware queues, achieving 14x higher packet rates as compared to single-queue CAKE and HTB.
 %
-Initial tests of a rebalancing mechanism within \textit{mq-cake} also show that this is possible: However, this mechanism is not further analyzed within this paper.
+\textit{mq-cake} also improves tail-latencies while being as accurate as the EDT-BPF approach.
+
 %
-Another method to counteract imbalances is to reduce the \textit{synctime}, which can be seen in Figure~\ref{fig:txq_imbalance_1514} for synchronization times of 5--10$\mu s$. However, as described above, reducing the \textit{synctime} is only possible to a certain extent and depends on the number of transmission queues.
+The analysis of the \textit{synctime} shows that setting its value too low increases the CPU overhead.
 %
+As a lower bound, the synchronization time should be higher than the time it takes to complete one scan over all qdiscs.
+%
+On the other hand, higher \textit{synctimes} lead to less CPU load but also increase the time it takes \textit{mq-cake} to converge.
+%
+To balance between CPU load and accuracy, the experiments show that a \textit{synctime} value between 100--200$\mu s$ is ideal.
+
+Looking ahead, we aim to further explore solutions for addressing load imbalances between \textit{mq-cake} instances.
+%
+In initial tests, we could already observe that it is possible to add a rebalance mechanism within \textit{mq-cake}, which can adjust local rate limit estimations.
+%
+In addition, we seek to investigate automated approaches to adjust and configure the \textit{synctime} interval and other internal configurations such as for example the \textit{memlimit}.
+%
+In our experiments, we observed that reducing the \textit{memlimit} had positive impacts on accuracy.
+%
+Furthermore, to deepen our understanding of \textit{mq-cake}'s applicability, we plan to evaluate its performance with higher-speed network cards and test it under real-world traffic conditions.
+%
+There is also potential to investigate other applications that could benefit from our proposed synchronization mechanisms.
