--- a/conference/NetDevConf2025-0x19/mq-cake-paper/implementation.tex
+++ b/conference/NetDevConf2025-0x19/mq-cake-paper/implementation.tex
@@ -19,7 +19,7 @@ When this frequency is lower, the CPU load decreases but takes longer to converg
 Further, the CPU load increases as the number of hardware queues grows, since more data structures must be accessed in order to estimate the local rate.
 %
 However, if the per-packet CPU load becomes too high, the achieved throughput lowers, potentially hindering the system from driving higher rate limits.
-This phenomenon will be covered in greater detail in the \textit{Evaluation} chapter.
+This phenomenon will be covered in greater detail in the \textit{Evaluation} section.
 
 \begin{figure}[h]
     \centering
@@ -72,12 +72,9 @@ This scenario would also lead the qdisc to falsely read the instance as inactive
 Thus, the scanning qdisc needs to maintain a counter --- similar to a heartbeat signal --- to determine if another qdisc has sent packets since the last synchronization scan.
 %
 
-This external qdisc observation is necessary because a qdisc cannot mark itself as (in)active, as its code is only executed if the qdisc receives a packet or is triggered by a timer.
+This external qdisc observation is necessary because a qdisc cannot accurately determine if it is active or inactive.
 %
-If a qdisc runs empty of packets and there are no further packets enqueued, the qdisc can no longer change its status as active or inactive.
-%
-This means that, should a qdisc run empty, it would need to mark itself as inactive; but in cases where packets are immediately sent out, the qdisc would oscillate
-between active and inactive, leading to inaccurate values for other qdiscs. 
+For example, in cases where packets are immediately sent out, the qdisc would oscillate between active and inactive, leading to inaccurate values for other qdiscs. 
 %
 
 \begin{algorithm}[t]
@@ -102,10 +99,12 @@ between active and inactive, leading to inaccurate values for other qdiscs.
 \end{algorithm}
 The two activity indicators are read and written using the READ/WRITE\_ONCE macros.
 %
-Thus, the reads and writes are racy --- however, this does not present a problem, as the activity indicators do not rely on exact values but rather on whether the backlog of a qdisc is zero and whether the number of sent packets has changed.
+Thus, the reads and writes are racy --- however, this does not present a problem, since this approach evaluates the activity indicators in intervals rather than in precise events.
+%
+In the unlucky event that a qdisc's state would change exactly at the same time as another qdisc executes its scan, the change in state will be captured in the worst case during the next scan.
 %
 This approach has the benefit of not building contention points while still achieving accurate local rate limit estimations.
 %
 Algorithm~\ref{alg:algo} shows this synchronization algorithm.
 %
-The source code of \textit{MQ\_CAKE} is published here: \url{https://github.com/mq-cake/linux-mq-cake}.
+The source code of \textit{mq-cake} is published here: \url{https://github.com/mq-cake/linux-mq-cake}.
