conference/Netdevconf0x19: fix architecture graphic

--- a/conference/NetDevConf2025-0x19/mq-cake-paper/implementation.tex
+++ b/conference/NetDevConf2025-0x19/mq-cake-paper/implementation.tex
@@ -23,7 +23,7 @@ This phenomenon will be covered in greater detail in the \textit{Evaluation} sec
 
 \begin{figure}[h]
     \centering
-    \includegraphics[scale=0.15]{images/mq_cake_architecture.drawio.png}
+    \includesvg[scale=0.21]{images/mq_cake_architecture.svg}
     \caption{mq-cake architecture with four hardware transmission queues}\label{fig:mq_cake_architecture}
 \end{figure}
 
